k8s/prod/webapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: prod
spec:
  selector:
    app: webapp
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
